# JobSearchAI

./: .env.example  .gitignore  Procfile  README.md  TODO.txt  app.py  config.py  main.py  pyproject.toml  requirements.txt  test.py
adapters/: adapter_logic.py  arbeitnow.py  jobicy.py  remoteok.py  remotive.py
agent/: handler.py  job_title_agent_service.py  llm_agent_service.py
models/: cache_job_data.py  database.py
schemas/: dbStorage.py
services/: cache_logic.py
utils/: formatters.py  intent_detector.py  prompts.py
