[project]
name = "jobsearchai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=24.1.1",
    "openai>=2.15.0",
    "requests>=2.32.5",
]
