[project]
name = "jobsearchai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "fuzzywuzzy>=0.18.0",
    "gunicorn>=24.1.1",
    "openai>=2.15.0",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
]
